# filesystem_spec

./: .codespellrc  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  dummy.txt  install_downstream_testmode.sh  install_s3fs.sh  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: codespell.yml  main.yaml  pypipublish.yaml
ci/: environment-downstream.yml  environment-friends.yml  environment-gcsfs.yml  environment-linux.yml  environment-py38.yml  environment-typecheck.yml  environment-win.yml  install.sh  install_conda.sh
docs/: Makefile  README.md  environment.yml  make.bat
docs/source/: api.rst  async.rst  changelog.rst  code-of-conduct.rst  conf.py  copying.rst  developer.rst  features.rst  index.rst  intro.rst  usage.rst
fsspec/: __init__.py  _version.py  archive.py  asyn.py  async_interps.py  caching.py  callbacks.py  compression.py  config.py  conftest.py  core.py  dircache.py  exceptions.py  fuse.py  generic.py  gui.py  json.py  local.py  mapping.py  memory.py  parquet.py  registry.py  spec.py  spec.pyi  temporary.py  transaction.py  utils.py
fsspec/implementations/: .dirfs.py.swp  __init__.py  arrow.py  asyn_wrapper.py  cache_mapper.py  cache_metadata.py  cached.py  chained.py  dask.py  data.py  dbfs.py  dirfs.py  dropboxdrivefs.py  dvc.py  ftp.py  ftp_tls.py  gist.py  git.py  github.py  hdfs.py  http.py  http_rust.py  http_sync.py  jsfs.py  jupyter.py  libarchive.py  local.py  localmemory.py  memory.py  prefix.py  reference.py  sftp.py  smb.py  tar.py  webhdfs.py  zip.py
fsspec/implementations/tests/: conftest.py  ftp_tls.py  keycert.pem  test_archive.py  test_arrow.py  test_asyn_wrapper.py  test_cached.py  test_common.py  test_dask.py  test_data.py  test_dbfs.py  test_dir.py  test_dirfs.py  test_ftp.py  test_ftp_tls.py  test_gist.py  test_git.py  test_github.py  test_hdfs.py  test_http.py  test_http_sync.py  test_jupyter.py  test_libarchive.py  test_local.py  test_localmemory.py  test_memory.py  test_prefix.py  test_reference.py  test_sftp.py  test_sftp_mkdir.py  test_smb.py  test_tar.py  test_webhdfs.py  test_zip.py
fsspec/implementations/tests/cassettes/: test_dbfs_file_listing.yaml  test_dbfs_mkdir.yaml  test_dbfs_read_pyarrow_non_partitioned.yaml  test_dbfs_read_range.yaml  test_dbfs_write_and_read.yaml  test_dbfs_write_pyarrow_non_partitioned.yaml
fsspec/implementations/tests/cassettes/test_dbfs/: test_dbfs_file_listing.yaml  test_dbfs_listing.yaml  test_dbfs_mkdir.yaml  test_dbfs_read_pyarrow_non_partitioned.yaml  test_dbfs_read_range.yaml  test_dbfs_write_and_read.yaml  test_dbfs_write_pyarrow_non_partitioned.yaml
fsspec/implementations/tests/local/: local_fixtures.py  local_test.py
fsspec/implementations/tests/memory/: memory_fixtures.py  memory_test.py
fsspec/tests/: conftest.py  test_api.py  test_async.py  test_cache_threads.py  test_caches.py  test_callbacks.py  test_chained.py  test_compression.py  test_config.py  test_core.py  test_dircache.py  test_downstream.py  test_file.py  test_fuse.py  test_generic.py  test_gui.py  test_mapping.py  test_parquet.py  test_registry.py  test_spec.py  test_utils.py
fsspec/tests/abstract/: __init__.py  copy.py  get.py  mv.py  put.py
fsspec/tests/base/: __init__.py  spec.py
fsspec/tests/spec/: test_http.py  test_memory.py
tests/: conftest.py  test_api.py  test_async.py  test_caches.py  test_chained.py  test_compression.py  test_core.py  test_file.py  test_generic.py  test_http_output.py  test_spec.py  test_utils.py
tests/data/: listing.html
tests/implementations/: conftest.py  ftp_tls.py  ftp_tlsv12.py  test_asyn_wrapper.py  test_cached.py  test_common.py  test_data.py  test_dirfs.py  test_ftp.py  test_git.py  test_http.py  test_http_sync.py  test_jupyter.py  test_libarchive.py  test_local.py  test_memory.py  test_reference.py  test_sftp.py  test_smb.py  test_tar.py  test_zip.py
tests/implementations/cassettes/test_dbfs/: test_dbfs_mkdir.yaml  test_dbfs_read_range.yaml
tests/implementations/local/: local_test.py
tests/implementations/memory/: memory_fixtures.py  memory_test.py
