[metadata]
long_description: file: README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = fsspec/_version.py
versionfile_build = fsspec/_version.py
tag_prefix = ""

[flake8]
exclude = .tox,build,docs/source/conf.py,versioneer.py
max-line-length = 88
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # whitespace before :
    E203
