[metadata]
long_description: file: README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = fsspec/_version.py
versionfile_build = fsspec/_version.py
tag_prefix = ""

[flake8]
exclude = .tox,build,docs/source/conf.py,versioneer.py,fsspec/_version
max-line-length = 88
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # whitespace before :
    E203
    # redefs
    F811

[isort]
known_first_party=fsspec
known_third_party=aiohttp,cramjam,dask,distributed,dvc,fuse,libarchive,numpy,panel,paramiko,pyarrow,pygit2,pytest,requests,setuptools,smbclient
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
skip=
    .tox
    build
    docs/source/conf.py
    versioneer.py
    fsspec/_version
