[metadata]
long_description: file: README.rst


[flake8]
exclude = .tox,build,docs/source/conf.py,fsspec/_version
max-line-length = 88
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # whitespace before :
    E203
    # redefs
    F811

[isort]
known_first_party=fsspec
known_third_party=aiohttp,dask,distributed,fuse,libarchive,numpy,panel,paramiko,pygit2,pytest,requests,s3fs,smbclient,yarl
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
skip=
    .tox
    build
    docs/source/conf.py
    fsspec/_version

[mypy]
follow_imports = normal
ignore_missing_imports = True
enable_error_code = ignore-without-code,truthy-bool,truthy-iterable,unused-awaitable

disallow_untyped_decorators = False
strict_equality = False
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True


# don't bother type-checking test_*.py or conftest.py files
exclude = (test.*|conftest)\.py$

# TODO: turn on globally once we type enough of fsspec
[mypy-fsspec.caching]
check_untyped_defs = True

[mypy-fsspec.utils]
check_untyped_defs = True
